added modal size, header show, modal id and updated example

--- a/src/app/components/modal-config/modal-config.html
+++ b/src/app/components/modal-config/modal-config.html
@@ -1,5 +1,6 @@
 <ng-template #modalContent let-modal>
-  <div class="modal-header" *ngIf="modalOptions?.header" [ngClass]="modalOptions?.header?.headerClass">
+  <div class="modal-header" *ngIf="modalOptions?.header?.show"
+    [ngClass]="modalOptions?.header?.headerClass">
     <h4 class="modal-title" id="modal-title" [ngClass]="modalOptions.header.customClass">
       {{modalOptions.header.title}}
     </h4>
