--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,25 @@
 <button class="btn btn-lg btn-outline-primary" (click)="openConfimModal()">
   Launch demo modal
 </button>
+<div class="marquee">
+  <div class="marquee--inner">
+    <span>
+      <div class="orb">This is line 1</div>
+    </span>
+    <span>
+      <div class="orb">This is line 2</div>
+    </span>
+    <span>
+      <div class="orb">This is line 3</div>
+    </span>
+    <span>
+      <div class="orb">This is line 4</div>
+    </span>
+    <span>
+      <div class="orb">This is line 5</div>
+    </span>
+    <span>
+      <div class="orb">This is line 6</div>
+    </span>
+  </div>
+</div>
